fixing the assets not showing problem

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -15,6 +15,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+}
+#__nuxt {
   background-color: black;
   font-family: 'Aktifo';
 }
